@startuml
interface IBoundsControlEditor {
    + {abstract} enableBoundsControl() : void
    + {abstract} disableBoundsControl() : void
}
interface IBoundsControlProvider {
}
class BoundsControlRepository {
    + enableBoundsControl() : void
    + disableBoundsControl() : void
}
class "IReadOnlyReactiveProperty`1"<T> {
}
IBoundsControlProvider --> "areBoundsEnabled<bool>" "IReadOnlyReactiveProperty`1"
IBoundsControlEditor <|-- BoundsControlRepository
IBoundsControlProvider <|-- BoundsControlRepository
BoundsControlRepository --> "areBoundsEnabled<bool>" "IReadOnlyReactiveProperty`1"
@enduml
